.gke/ai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-ml
  namespace: ai-test
spec:
  type: ClusterIP
  ports:
    - port: 8050
      targetPort: 8050
  selector:
    app: ai-ml
