.gke/iris-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iris-ml
  namespace: ai-test
spec:
  type: ClusterIP
  ports:
    - port: 52773
      targetPort: 52773
  selector:
    app: iris-ml
